--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "normalize-port": "^1.0.0",
     "socket.io": "^4.1.2"
   }
 }
